<resources>
    <string name="app_name">Shoes Tap</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="imagendezapatos">Imagen de zapatos</string>
    <string name="shoe_image_desc">Descripción de la imagen del zapato</string>
    <string name="eliminar">Eliminar</string>
    <string name="ver_carrito">Ver Carrito</string>
    <string name="remove_item">Eliminar</string>
    <string name="remove_item_desc">Eliminar ítem del carrito</string>
    <string name="price_format">Precio: $%1$.2f</string>
    <string name="total_price">Total: %.2f</string>


    <string name="search_hint">Buscar productos...</string>
    <string name="volver">Volver</string>
    <string name="buscar">Buscar</string>

    <string name="el_carrito_est_vac_o">El carrito está vacío</string>
    <string name="cart_count">%1$d items</string>
    <string name="shoe_price_format">Precio: $%d</string>
    <string name="shoe_tap">Shoe Tap</string>
    <string name="volver2">Volver</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="tu_carrito_est_vac_o">Tu carrito está vacío</string>
    <string name="pagar">Pagar</string>
    <string name="total_0">Total: $0</string>
    <string name="_0">0</string>
    <string name="_0a">0</string>
    <string name="buscar_zapatos">Buscar Zapatos</string>
    <string name="by_jonny_v_a">by Jonny V. A.</string>
    <string name="shoe_stap">Shoe Stap</string>
    <string name="by_jonny_v_a2">by Jonny V. A.</string>
</resources>
