<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorBackground">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="fill_horizontal">

        <Button
            android:id="@+id/back_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorSecondary"
            android:padding="8dp"
            android:text="@string/volver2"
            android:textColor="@color/colorOnSecondary" />

        <Button
            android:id="@+id/pay_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pagar"
            android:layout_weight="1"
            android:padding="8dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/colorSecondary"
            android:textColor="@color/colorOnSecondary" />
    </LinearLayout>

    <TextView
        android:id="@+id/total_price_text_view"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/total_0"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="visible" /> <!-- lo oculto al inicio porsiaca -->

    <TextView
        android:id="@+id/empty_cart_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tu_carrito_est_vac_o"
        android:textColor="#616161"
        android:textSize="18sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/checkout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finalizar_compra"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorOnPrimary" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/biz_udpgothic"
        android:text="@string/by_jonny_v_a2" />
</LinearLayout>
